k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - image: quay.io/sthaha/voting-ui:latest
          name: ui
          ports:
            - containerPort: 8080
            - containerPort: 9090
