k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ui
