k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: voting-ui
  name: voting-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: voting-ui
    weight: 100
